# phantom-store

./: Cargo.toml  README.md
.sqlx/: query-04a5177744d190da53dd953864d2f5cf200634d40cf935b603f07776ed102745.json  query-0eea6ac7603583ce965bec3d8a21867c2426f2307ff29f1b4b22607776d93e41.json  query-1abb4e0d7bc19782e30776c9c9acc167326943c2f7d185e7a12b6beaffc0654c.json  query-23918fcb6f17c101c5c4cd2f5184f3d16ce241c0d9700635bec210ec347868f1.json  query-26f549dfdf4ecaa776e02f71a404f60b2c300625d00e291d711279db91b08134.json  query-2935355ae69365b16b3a85ff181e130ea66e9c1215a33c942dfc7dd0b87d86b9.json  query-29efc4c96d46a7b05e86c1b42a041d1eefbc7ea981543e9d7db5e5ff721e32b1.json  query-2da24164b9a2f2023458b18b5af18d7ceda6368c56c55ceaad91ffd821b10b07.json  query-3033804562b4eeae84606ee1d9826bedabd578e51d891d6b0719042a0168e865.json  query-3321a5ae72c8590dd65e8129bc67f53c3cf828109adb8293ff2ee164a665167e.json  query-3fe48edf4199a03bbec0e1bc59974fb144daa76d806fc24226f5b573b5a683ad.json  query-41dff2fcec987482a2d692c32e08fd54a66398ca114d79209c940c5e4d325e81.json  query-430417790c88afac25168718a0c54c417f95052d2c8d194a39b4ab1d6363c62c.json  query-4b552024859b96705c4f081e1ac77c6533b8c731db836e6e3126d595bdb9ba7b.json  query-4e945bf5038a0d0d4cdf3563247ca3968d7bd761e80749fd699fff5ee2216e89.json  query-511c75da988414eaab223b4ac5cfd780bbae117153a4e73be0152e4a4f910c4d.json  query-538e1d23a6a66aa56deacc423857563b4d4bac51ca4b4686bab3db3c2c635e2d.json  query-591a731ba00c16b04b91822a6e579424cf2ec6db500052a28ffc3c2f4c8187cf.json  query-591af5658e138e9a21f1a248ae0bcd904a0b29ba0ba751fe352389e82323102f.json  query-59bd0a2ce1d6b3e0861156b30a4627364b69bbae0f3832f84f1341b76b9db7a0.json  query-62c5c80a446fe79415c5caf74c1617b45035bbe8c7dc7a8db6eb6b7104ecfb84.json  query-67b84788d22b82bfe9bac734af22787e207fa731b593ec77a188013e18805b7f.json  query-6b3cffcf91d2fe9d823ffa21ceb9e4ad3f96433294959770bd671587c9d93ec7.json  query-6c3d68faca25520332cd4a05f92819eb1ebf92de79d82797b26bb25ae85f4d59.json  query-6e78c032cd0886f089b4c6be763983e9d990514004b093c6c69a867a6e84c61f.json  query-7c556b85af6503c468fed2fadf9223306bbb26f02bee15228122797d9f0d496f.json  query-7c55a0a1df50c1d64bd740a8ea1474ddf7d934d0c1e86df03fa0e02249fffc5d.json  query-7f777e690620f350db124465751c0d74bab0bd7db4e862cb6c42ad176e1f9d25.json  query-84513ed69afcaa2f9743929bcca7b172e5d05212a8ec3afdc44ca26553dce2e8.json  query-899911d87240bd0d5a1a47fbe0679b3a7a1b38e259706a113495047bf86fa65e.json  query-931f425918439278765d00b18c974138b61080b6f08b848ef12de094628150f2.json  query-964a7dc511ab26cd48bbbadfa44dd0cb47fe6a26b0a4882b5fbcef2dcb16431d.json  query-9699f2152a79ae9851f936404af5c0beaaa739da8af2c26e54c61140587a8bd4.json  query-9795005e656b3128bec17886bfc59865e8a0de068d544615319f4bf845eff129.json  query-99e78d7d67bb9535a8766aaa20fcca4486fd02a10a67fdef8d6a2d29cc10bad0.json  query-a2057945f4846a2e0934d52e93e7a2ded971d4f17238eae3bb37b9213bc8da4a.json  query-a624d86f0895b518c13a2754281e74537efd8213f0fba799b2e8b1239b4ba66f.json  query-b101ae7ead31ce6f59d4292f84ee5b8d9bdd6c54b11ceca6b45c2f4629cce2ee.json  query-b174de87d2629af44c2c0fa7d90a1b42d66d00c77bfd04c8160f1368b3aaf5f9.json  query-b5deaf7c43beb9323457029415b8e5c10add7b9c8d3f51bd93eb2d568f792827.json  (+18 more)
libs/kanau-framework/: Cargo.toml
migrations/: 20260106075032_config_table.up.sql  20260106094016_prepare_admin_tables.down.sql  20260106094016_prepare_admin_tables.up.sql  20260106102604_create_auth_module_tables.down.sql  20260106102604_create_auth_module_tables.up.sql  20260106175032_config_table.down.sql  20260106175032_config_table.up.sql  20260114174941_create_ordering_module_tables.down.sql  20260114174941_create_ordering_module_tables.up.sql  20260115153451_add_new_tables_in_ordering_module.down.sql  20260115153451_add_new_tables_in_ordering_module.up.sql  20260126111930_add_new_tables_in_blochchain_sync_module.down.sql  20260126111930_add_new_tables_in_blochchain_sync_module.up.sql
modules/admin/: Cargo.toml
modules/admin/src/: lib.rs
modules/admin/src/entities/: admin_account.rs  admin_session.rs  mod.rs
modules/admin/src/rpc/: admin_auth.rs  middleware.rs  mod.rs
modules/admin/src/services/: admin_auth.rs
modules/admin/src/utils/: config_provider.rs  mod.rs  password.rs  rbac.rs
modules/auth/: Cargo.toml
modules/auth/src/: config.rs  lib.rs
modules/auth/src/entities/db/: email_otp.rs  mod.rs  oauth_account.rs  totp.rs  user_account.rs  user_password.rs
modules/auth/src/entities/redis/: mfa_token.rs  mod.rs  oauth_challenge.rs  session.rs  sudo_token.rs  totp_setup.rs  user_session_list.rs
modules/auth/src/events/: account.rs  email.rs  mod.rs
modules/auth/src/rpc/: conversions.rs  middleware.rs  mod.rs  session.rs  sudo.rs  totp.rs  user_account.rs  user_auth.rs  user_profile.rs
modules/auth/src/services/: admin_manage.rs  email_provider.rs  mfa.rs  mod.rs  oauth_provider.rs  session.rs  user_account.rs
modules/auth/src/utils/: jwt.rs  mod.rs
modules/auth/src/utils/oauth/: client_config.rs  mod.rs
modules/auth/src/utils/oauth/providers/: discord.rs  github.rs  google.rs  microsoft.rs  mod.rs
modules/blockchain_sync/: Cargo.toml
modules/blockchain_sync/src/: lib.rs
modules/blockchain_sync/src/entities/: customer_addresses.rs  erc20_pending_deposit.rs  erc20_stablecoin_pending_deposit.rs  erc20_stablecoin_token_transfer.rs  erc20_token_transfer.rs  evm_token_transfer.rs  mod.rs  stable_coin_pending_deposit.rs  stable_coin_token_transfer.rs  trc20_pending_deposit.rs  trc20_stable_coin_pending_deposit.rs  trc20_stable_coin_token_transfer.rs  trc20_token_transfer.rs  wallet_addresses.rs
modules/blockchain_sync/src/services/: etherscan.rs  mod.rs  transfer_sync.rs  tronscan.rs
modules/blockchain_sync/src/services/etherscan/: chains.rs  mod.rs
modules/blockchain_sync/src/utils/: mod.rs  supported_tokens.rs
modules/proto/: Cargo.toml  build.rs
modules/proto/src/: common_types.rs  lib.rs
modules/waf/: Cargo.toml
modules/waf/src/: lib.rs
modules/waf/src/entities/: hashcash_challenge.rs  mod.rs  rate_limit.rs
phantom-store-cli/: Cargo.toml
server/: Cargo.toml
(+43 files in other folders)
