[package]
name = "admin"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
kanau = { workspace = true }
sqlx = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
compact_str = { workspace = true }
tokio = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tower = { workspace = true }
framework = { workspace = true }
hex = "0.4"
phantom-shop-proto = { workspace = true }
argon2 = { version = "0.5", features = ["std"] }

