[package]
name = "auth"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
framework = { workspace = true }
admin = { path = "../admin" }
phantom-shop-proto = { path = "../proto" }
anyhow = { workspace = true }
kanau = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
amqprs = { workspace = true }
tokio = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
compact_str = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tower = { workspace = true }
fast32 = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
zeroize = { workspace = true }
lazy_static = { workspace = true }
rkyv = { workspace = true }
oauth2 = { version = "5.0" }
argon2 = { version = "0.5", features = ["std"] }
hex = "0.4"
totp-rs = "5.7"

[build-dependencies]
tonic-prost-build = { workspace = true }
