[package]
name = "blockchain_sync"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
framework = { workspace = true }
anyhow = { workspace = true }
kanau = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
amqprs = { workspace = true }
tokio = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
compact_str = { workspace = true }
rust_decimal = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
rkyv = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
