[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic-prost = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
